// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test print with hook skip render. 1`] = `
"// @ts-nocheck
import xx1 from "xxx";
/* sagaroute-inject:imports */
/* injected by sagaroute: start */
import xx from "xxx";
/* injected by sagaroute: end */

// sagaroute-inject: routes
const routes = 1;
export default null;"
`;

exports[`test print with hook skip write. 1`] = `
"// @ts-nocheck
import React from "react";
/* sagaroute-inject:imports */
/* injected by sagaroute: start */
import SrcPagesUsers_Id_ from "./src/pages/users/[id].tsx";
import SrcPagesIndex from "./src/pages/index.tsx";
import SrcPages404 from "./src/pages/404.tsx";
/* injected by sagaroute: end */

// sagaroute-inject: routes
const routes = [
  {
    "path": "users",
    "children": [
      {
        "path": ":id",
        "element": <SrcPagesUsers_Id_/>
      }
    ]
  },
  {
    "path": "/",
    "element": <SrcPagesIndex/>
  },
  {
    "path": "*",
    "element": <SrcPages404/>
  }
];
export default routes;"
`;

exports[`test print with hook skip write. 2`] = `
"// @ts-nocheck
import React from "react";
/* sagaroute-inject:imports */

// sagaroute-inject: routes
const routes = [];

export default routes;
"
`;

exports[`test print with hook using custom template 1`] = `
"// @ts-nocheck
import React from "react";
import SrcPagesUsers_Id_ from "./src/pages/users/[id].tsx";
import SrcPagesIndex from "./src/pages/index.tsx";
import SrcPages404 from "./src/pages/404.tsx";

const routes = [
  {
    "path": "users",
    "children": [
      {
        "path": ":id",
        "element": <SrcPagesUsers_Id_/>
      }
    ]
  },
  {
    "path": "/",
    "element": <SrcPagesIndex/>
  },
  {
    "path": "*",
    "element": <SrcPages404/>
  }
];

const router = createBrowserRouter(routes)

export default router;
"
`;

exports[`test print with hooks 1`] = `
"// @ts-nocheck
/* sagaroute-inject: prefix */
/* injected by sagaroute: start */
import React from "react";
/* injected by sagaroute: end */

// sagaroute-inject: constantRoutes
export const constantRoutes = [
  {
    "path": "users",
    "children": [
      {
        "path": ":id",
        "element": <SrcPagesUsers_Id_/>
      }
    ]
  },
  {
    "path": "/",
    "element": <SrcPagesIndex/>
  },
  {
    "path": "*",
    "element": <SrcPages404/>
  }
];

/* sagaroute-inject: asyncRoutes */
export const asyncRoutes = [
  {
    "path": "permission",
    "element": <SrcPagesPermissionIndex/>
  }
];"
`;
